--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,10 +30,11 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.runlah_flutter"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -48,3 +49,8 @@ android {
 flutter {
     source '../..'
 }
+dependencies {
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
+}
+apply plugin: 'com.google.gms.google-services'
