--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_auth: ^1.1.2
   cloud_firestore: ^1.0.7
   google_maps_flutter: ^2.0.3
+  geolocator: ^7.0.3
 
 dev_dependencies:
   flutter_test:
