--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   cloud_firestore: ^1.0.7
   google_maps_flutter: ^2.0.3
   geolocator: ^7.0.3
+  pedometer: ^3.0.0
+  permission_handler: ^7.1.0
+
 
 dev_dependencies:
   flutter_test:
