--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,9 @@ dependencies:
   geolocator: ^7.0.3
   pedometer: ^3.0.0
   permission_handler: ^7.1.0
-  fl_chart: ^0.36.0
+  intl: ^0.17.0 # for localisation
+  fl_chart: ^0.36.0 # for bar chart
+
 
 
 dev_dependencies:
