--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   permission_handler: ^7.1.0
   intl: ^0.17.0 # for localisation
   fl_chart: ^0.36.0 # for bar chart
+  light: ^2.0.0
+  screen: ^0.0.5
 
 
 
