--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_native_splash: ^1.1.8+4
+
+flutter_native_splash:
+  color: "#673AB7"
+  image: assets/icon.png
+  android: true
+  ios: true
+
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icon.png
 
 
