added launcher icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,18 @@ dev_dependencies:
     sdk: flutter
 
   flutter_native_splash: ^1.1.8+4
+  flutter_launcher_icons: ^0.9.0
 
 flutter_native_splash:
   color: "#673AB7"
   image: assets/icon.png
   android: true
   ios: true
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 
 flutter:
   uses-material-design: true
