--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   firebase_auth: ^1.1.2
   cloud_firestore: ^2.0.0
   google_maps_flutter: ^2.0.3
-  geolocator: ^7.0.3
+  geolocator: ^7.2.0+1
   pedometer: ^3.0.0
   permission_handler: ^7.1.0
   intl: ^0.17.0 # for localisation
